--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div id="topo">#SavetheManuals</div>
 
-        <!-- QUESTÃO 01: Adição do Menu -->
+        <!--  Adição do Menu -->
         <div id="menu">
             <div class="botao" id="botao1">Bot 1</div>
             <div class="botao" id="botao2">Bot 2</div>
@@ -29,7 +29,7 @@
 
         <div id="meio">
 
-        <!-- QUESTÃO 02: Imagens nas laterais -->
+        <!--  Imagens nas laterais -->
         <div id="esquerda">
             <img src="imagem/gt.jpg" alt="Imagem Lateral Esquerda" width="100%">
         </div>
@@ -39,7 +39,7 @@
 
 
 
-        <!-- QUESTÃO 03: Vídeo no centro -->
+        <!--  Vídeo no centro -->
         <div id="centro">
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/OwmsRM4zSUs" title="Vídeo do Projeto" frameborder="0" allowfullscreen></iframe>
         </div>
