--- a/index.html
+++ b/index.html
@@ -3,63 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de Margem</title>
+    <title>#SavetheManuals</title>
     <link rel="stylesheet" href="css/geral.css">
 </head>
-
-
-
-
-
-<body>
+<body>                                                                         
     <div id="corpo">
-
         <div id="topo">#SavetheManuals</div>
 
-        <!--  Adição do Menu -->
         <div id="menu">
-            <div class="botao" id="botao1">Bot 1</div>
-            <div class="botao" id="botao2">Bot 2</div>
-            <div class="botao" id="botao3">Bot 3 </div>
-            <div class="botao" id="botao4">Boot 4 </div>
-            <div class="botao" id="botao5">Bot 5</div>
+            <a href="pagina1.html" class="botao">Bot 1</a>
+            <a href="pagina2.html" class="botao">Bot 2</a>
+            <a href="pagina3.html" class="botao">Bot 3</a>
+            <a href="pagina4.html" class="botao">Bot 4</a>
+            <a href="pagina5.html" class="botao">Bot 5</a>
         </div>
-
-
 
         <div id="meio">
+            <div id="esquerda">
+                <img src="imagem/gt.jpg" alt="Imagem Lateral Esquerda">
+            </div>
 
-        <!--  Imagens nas laterais -->
-        <div id="esquerda">
-            <img src="imagem/gt.jpg" alt="Imagem Lateral Esquerda" width="100%">
+            <div id="centro">
+                <iframe src="https://www.youtube.com/embed/OwmsRM4zSUs" 
+                        title="Vídeo do Projeto" 
+                        allowfullscreen></iframe>
+            </div>
+
+            <div id="direita">
+                <img src="imagem/mustang 2.jpg" alt="Imagem Lateral Direita">
+            </div>
         </div>
-
-
-
-
-
-
-        <!--  Vídeo no centro -->
-        <div id="centro">
-            <iframe width="100%" height="700" src="https://www.youtube.com/embed/OwmsRM4zSUs" title="Vídeo do Projeto" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-
-
-
-
-
-        <div id="direita">
-            <img src="imagem/mustang 2.jpg" alt="Imagem Lateral Direita" width="100%">
-        </div>
-         </div>
-
-
-
-
 
         <div id="rodape">Rodapé</div>
-
-    </div>
+    </div> <!-- Correto: fecha aqui o #corpo -->
 </body>
 </html>
